feat: Finishing merge